[gd_scene load_steps=41 format=3 uid="uid://coxunvt2id6yf"]

[ext_resource type="Script" path="res://Scenes/level/level.gd" id="1_33gbj"]
[ext_resource type="Texture2D" uid="uid://b3dwryuhv2i0s" path="res://assets/objects/floor.png" id="2_3h3nl"]
[ext_resource type="Theme" uid="uid://cvhrwgxh48p4h" path="res://Scenes/level/custom_theme.tres" id="3_eeaed"]
[ext_resource type="Texture2D" uid="uid://diswtkd8wb4cq" path="res://assets/Bot/upper floor.png" id="3_hqsio"]
[ext_resource type="CodeHighlighter" uid="uid://c1u63mb6125tr" path="res://Scenes/level/level.tres" id="3_y2aoo"]
[ext_resource type="Texture2D" uid="uid://cs02icpm0jp5q" path="res://assets/Bot/right floor.png" id="4_4hsm0"]
[ext_resource type="Texture2D" uid="uid://bnemrjfr7mn26" path="res://assets/objects/floor2_E.png" id="6_wi4va"]
[ext_resource type="Texture2D" uid="uid://4hdvxyw7g3se" path="res://assets/objects/floor1_A.png" id="7_pkuxd"]
[ext_resource type="Texture2D" uid="uid://bqfr3373yb44y" path="res://assets/objects/floor3_A.png" id="7_val44"]
[ext_resource type="Texture2D" uid="uid://c464xac3y1sci" path="res://assets/objects/floor1_B.png" id="8_dm6a0"]
[ext_resource type="Texture2D" uid="uid://c6sl7k8nggnue" path="res://assets/objects/floor2_A.png" id="8_utb6d"]
[ext_resource type="Texture2D" uid="uid://dousbjkrw543x" path="res://assets/objects/floor3_B.png" id="8_yxi5f"]
[ext_resource type="Texture2D" uid="uid://6kqev280ypif" path="res://assets/objects/floor1_C.png" id="9_1mm0i"]
[ext_resource type="Texture2D" uid="uid://b4okrvuk3jltf" path="res://assets/objects/floor3_C.png" id="9_yeg4i"]
[ext_resource type="Script" path="res://Scenes/level/TileMap.gd" id="10_1esls"]
[ext_resource type="Texture2D" uid="uid://bmci1m4t8hax2" path="res://assets/objects/floor3_D.png" id="10_d0kuk"]
[ext_resource type="Texture2D" uid="uid://dvlw6o8j05x7c" path="res://assets/objects/floor3_E.png" id="11_7alsm"]
[ext_resource type="Texture2D" uid="uid://csfnycnso0bog" path="res://assets/objects/floor2_B.png" id="12_cx0i8"]
[ext_resource type="Texture2D" uid="uid://bykcay8xocl57" path="res://assets/objects/floor2_C.png" id="13_h7poa"]
[ext_resource type="Texture2D" uid="uid://dhto6pxc5q5lh" path="res://assets/objects/floor2_D.png" id="14_r4dci"]
[ext_resource type="AudioStream" uid="uid://10ikwgfui7m7" path="res://music/friday.mp3" id="21_33de2"]
[ext_resource type="AudioStream" uid="uid://5ffp8dshbu3a" path="res://music/click.wav" id="22_e088g"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g8h3y"]
texture = ExtResource("2_3h3nl")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ffwrj"]
texture = ExtResource("3_hqsio")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_upip7"]
texture = ExtResource("6_wi4va")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lkl3d"]
texture = ExtResource("7_val44")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g7mxx"]
texture = ExtResource("8_yxi5f")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_66slr"]
texture = ExtResource("9_yeg4i")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hggq0"]
texture = ExtResource("10_d0kuk")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c6rp1"]
texture = ExtResource("11_7alsm")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oup6q"]
texture = ExtResource("4_4hsm0")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jl6eh"]
texture = ExtResource("8_utb6d")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_33nh5"]
texture = ExtResource("7_pkuxd")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w4kij"]
texture = ExtResource("8_dm6a0")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hatbk"]
texture = ExtResource("9_1mm0i")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qgruy"]
texture = ExtResource("12_cx0i8")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fvheb"]
texture = ExtResource("13_h7poa")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g0r7k"]
texture = ExtResource("14_r4dci")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_2y1e7"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_g8h3y")
sources/1 = SubResource("TileSetAtlasSource_ffwrj")
sources/2 = SubResource("TileSetAtlasSource_oup6q")
sources/4 = SubResource("TileSetAtlasSource_33nh5")
sources/5 = SubResource("TileSetAtlasSource_w4kij")
sources/6 = SubResource("TileSetAtlasSource_hatbk")
sources/3 = SubResource("TileSetAtlasSource_jl6eh")
sources/7 = SubResource("TileSetAtlasSource_qgruy")
sources/8 = SubResource("TileSetAtlasSource_fvheb")
sources/9 = SubResource("TileSetAtlasSource_g0r7k")
sources/10 = SubResource("TileSetAtlasSource_upip7")
sources/11 = SubResource("TileSetAtlasSource_lkl3d")
sources/12 = SubResource("TileSetAtlasSource_g7mxx")
sources/13 = SubResource("TileSetAtlasSource_66slr")
sources/14 = SubResource("TileSetAtlasSource_hggq0")
sources/15 = SubResource("TileSetAtlasSource_c6rp1")

[sub_resource type="ImageTexture" id="ImageTexture_2i65s"]

[node name="level" type="Node2D"]
editor_description = "Todo:
1 1
1 1 
bot position problem"
script = ExtResource("1_33gbj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="interface" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_eeaed")

[node name="Panel2" type="Panel" parent="CanvasLayer/interface"]
layout_mode = 0
offset_right = 1279.0
offset_bottom = 68.0

[node name="Panel" type="Panel" parent="CanvasLayer/interface"]
layout_mode = 0
offset_left = 1024.0
offset_top = 64.0
offset_right = 1280.0
offset_bottom = 702.0
theme = ExtResource("3_eeaed")

[node name="botsSelect" type="OptionButton" parent="CanvasLayer/interface/Panel"]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 134.0
offset_bottom = 33.0

[node name="RunButton" type="Button" parent="CanvasLayer/interface/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -126.0
offset_right = 85.0
offset_bottom = -76.0
grow_vertical = 0
text = "Run"

[node name="StepButton" type="Button" parent="CanvasLayer/interface/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 99.15
offset_top = -126.0
offset_right = 179.15
offset_bottom = -76.0
grow_vertical = 0
text = "Step"

[node name="HSlider" type="HSlider" parent="CanvasLayer/interface/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -67.0
offset_right = 99.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
min_value = 10.0
step = 10.0
value = 50.0

[node name="CodeEdit" type="CodeEdit" parent="CanvasLayer/interface/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -275.0
offset_right = 125.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_eeaed")
theme_override_colors/font_color = Color(0.905882, 0.113725, 0.211765, 1)
placeholder_text = "#program"
syntax_highlighter = ExtResource("3_y2aoo")
draw_control_chars = true
draw_tabs = true
draw_spaces = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true

[node name="SpeedLabel" type="Label" parent="CanvasLayer/interface/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -71.0
offset_right = 56.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
text = "Game speed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebugButton" type="Button" parent="CanvasLayer/interface/Panel"]
layout_mode = 0
offset_left = 145.0
offset_top = 5.0
offset_right = 250.0
offset_bottom = 33.0
text = "debug"

[node name="DebugRichTextLabel" type="RichTextLabel" parent="CanvasLayer/interface/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 305.0
offset_right = -6.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="ExitButton" type="Button" parent="CanvasLayer/interface"]
layout_mode = 0
offset_left = 1229.0
offset_top = 10.0
offset_right = 1269.0
offset_bottom = 50.0
text = "X"

[node name="FullScreenButton" type="Button" parent="CanvasLayer/interface"]
layout_mode = 0
offset_left = 1175.0
offset_top = 10.0
offset_right = 1215.0
offset_bottom = 50.0
theme = ExtResource("3_eeaed")
text = "FZ"
icon_alignment = 1

[node name="Title" type="Label" parent="CanvasLayer/interface"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 519.0
offset_top = 10.0
offset_right = 723.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Level 0 - tutorial"

[node name="Description" type="RichTextLabel" parent="CanvasLayer/interface"]
layout_mode = 0
offset_left = 812.0
offset_top = 1.0
offset_right = 1153.0
offset_bottom = 67.0
focus_mode = 2
selection_enabled = true

[node name="ExitToMenuButton" type="Button" parent="CanvasLayer/interface"]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 54.0
text = "exit to menu"

[node name="HelpButton" type="Button" parent="CanvasLayer/interface"]
layout_mode = 0
offset_left = 225.0
offset_top = 10.0
offset_right = 269.0
offset_bottom = 54.0
text = "?"

[node name="TestCase" type="Label" parent="CanvasLayer/interface"]
layout_mode = 0
offset_left = 302.0
offset_top = 10.0
offset_right = 455.0
offset_bottom = 54.0
text = "Test 1/1"

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.45
blend_mode = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_2y1e7")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 1, 1, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 2, 1, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 6, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 3, 1, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 6, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 4, 1, 0, 65540, 0, 0, 131076, 0, 0, 196612, 6, 0, 262148, 6, 0, 327684, 5, 0, 393220, 5, 0, 458756, 6, 0, 524292, 6, 0, 589828, 6, 0, 655364, 0, 0, 5, 1, 0, 65541, 0, 0, 131077, 0, 0, 196613, 6, 0, 262149, 0, 0, 327685, 6, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 6, 0, 655365, 0, 0, 6, 1, 0, 65542, 0, 0, 131078, 0, 0, 196614, 6, 0, 262150, 6, 0, 327686, 5, 0, 393222, 0, 0, 458758, 6, 0, 524294, 0, 0, 589830, 6, 0, 655366, 0, 0, 7, 1, 0, 65543, 0, 0, 131079, 6, 0, 196615, 0, 0, 262151, 0, 0, 327687, 5, 0, 393223, 6, 0, 458759, 6, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 8, 1, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 5, 0, 327688, 5, 0, 393224, 6, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 9, 1, 0, 65545, 0, 0, 131081, 0, 0, 196617, 6, 0, 262153, 6, 0, 327689, 0, 0, 393225, 0, 0, 458761, 6, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 10, 1, 0, 65546, 0, 0, 131082, 0, 0, 196618, 6, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 11, 1, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 5, 0, 458763, 5, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 12, 1, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 5, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 13, 1, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 5, 0, 327693, 6, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 14, 1, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 5, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 15, 1, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 16, 1, 0, 65552, 2, 0, 131088, 2, 0, 196624, 2, 0, 262160, 2, 0, 327696, 2, 0, 393232, 2, 0, 458768, 2, 0, 524304, 2, 0, 589840, 2, 0, 655376, 2, 0, 17, 1, 0, 65553, 2, 0, 131089, 2, 0, 196625, 2, 0, 262161, 2, 0, 327697, 2, 0, 393233, 2, 0, 458769, 2, 0, 524305, 2, 0, 589841, 2, 0, 655377, 2, 0, 18, 1, 0, 65554, 2, 0, 131090, 2, 0, 196626, 2, 0, 262162, 2, 0, 327698, 2, 0, 393234, 2, 0, 458770, 2, 0, 524306, 2, 0, 589842, 2, 0, 655378, 2, 0, 19, 1, 0, 65555, 2, 0, 131091, 2, 0, 196627, 2, 0, 262163, 2, 0, 327699, 2, 0, 393235, 2, 0, 458771, 2, 0, 524307, 2, 0, 589843, 2, 0, 655379, 2, 0)
script = ExtResource("10_1esls")

[node name="Plates" type="Node" parent="."]

[node name="bots" type="Node" parent="."]

[node name="boxes" type="Node" parent="."]

[node name="Microphones" type="Node" parent="."]

[node name="Speakers" type="Node" parent="."]

[node name="TickTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ErrorWindow" type="Window" parent="."]
transparent_bg = true
title = "Error"
initial_position = 1
size = Vector2i(400, 200)
visible = false
content_scale_size = Vector2i(400, 200)
theme = ExtResource("3_eeaed")

[node name="Panel" type="Panel" parent="ErrorWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ErrorWindow"]
offset_left = 10.0
offset_top = 10.0
offset_right = 106.0
offset_bottom = 36.0
text = "Error at line "

[node name="ErrorButton" type="Button" parent="ErrorWindow"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -51.0
offset_right = 45.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "close"

[node name="WinLoseWindow" type="Window" parent="."]
transparent_bg = true
initial_position = 4
size = Vector2i(500, 300)
visible = false
theme = ExtResource("3_eeaed")
theme_override_icons/close = SubResource("ImageTexture_2i65s")

[node name="Panel" type="Panel" parent="WinLoseWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinLoseLabel" type="Label" parent="WinLoseWindow/Panel"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 91.0
offset_bottom = 36.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="WinLoseWindow/Panel"]
layout_mode = 1
offset_left = 10.0
offset_top = 70.0
offset_right = 91.0
offset_bottom = 96.0
text = "You did it with 90 seps, nice!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextLevelButton" type="Button" parent="WinLoseWindow/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
text = "NEXT LEVEL"

[node name="RestartButton" type="Button" parent="WinLoseWindow/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0
text = "RESTART"

[node name="ExitToMenuButton" type="Button" parent="WinLoseWindow/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 176.0
grow_vertical = 0
text = "EXIT TO MENU"

[node name="HelpWindow" type="Window" parent="."]
transparent_bg = true
initial_position = 4
size = Vector2i(500, 500)
visible = false
theme = ExtResource("3_eeaed")

[node name="Panel" type="Panel" parent="HelpWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HelpWindow/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
bbcode_enabled = true
text = "[center][color=#e71d36][b][font_size=30]LogiDocs[/font_size][/b][/color][/center]
	Welcome to LogiDocs, here you can learn about [color=#ff9f1c]Bots[/color] and how to code them!

[font_size=20][b][color=#2ec4b6]General Info[/color][/b][/font_size]
	Bot have [b]2[/b] memory slots. Active and Memory. You can access them by [i][color=#ff9f1c]active[/color][/i] or [i][color=#ff9f1c]mem[/color][/i]. E.g. '[i]add [color=#ff9f1c]active[/color][/i]'.
	By default Active and memory have value of 0.
	To switch them you can use [i][color=#ff9f1c][b]swap[/b][/color][/i] command.
	To save active value to Memory you can use [i][color=#ff9f1c][b]save[/b][/color][/i] command.

[font_size=20][b][color=#2ec4b6]Movement[/color][/b][/font_size]
To move bot you need to use [b][color=#ff9f1c]move[/color][/b] command.
[i]Syntax:[/i]
	'move <direction>'
	<direction> = [code]up, down, left, right[/code]

	[b][color=#208c81]Advanced Movement[/color][/b]
[i]Syntax:[/i]
	'move <direction> <times>'
	<direction> = [code]up, down, left, right[/code]
	<times> = [code]integer number [/code]


[font_size=20][b][color=#2ec4b6]Calculation[/color][/b][/font_size]
	[b][color=#ff9f1c]add[/color][/b] command will add number to active slot.
	E.g. '[i][color=#ff9f1c]add 10[/color][/i] '.
	[b][color=#ff9f1c]sub[/color][/b] command will substract number from active slot.
	E.g. '[i][color=#ff9f1c]sub 3[/color][/i] '.
[i]Syntax:[/i]
	'add <number>'
	<number> can be any integer or memory slot [color=#ff9f1c]'active'[/color] or[color=#ff9f1c] 'mem'[/color].

[font_size=20][b][color=#2ec4b6]Communication[/color][/b][/font_size]
	To communicate with bots and speakers you use [b][color=#ff9f1c]say[/color][/b] and [b][color=#ff9f1c]listen[/color][/b] command.
	Use '[color=#ff9f1c]say[/color]' to say active number to the direction you chose.
	Use '[color=#ff9f1c]listen[/color]' to get number from the direction you chose.
	You can listen from any boxes, but say only to green boxes and bots.
	Bots are very silly. If they listen to some direction, they will wait until someone speak to them.
 
[i]Syntax:[/i]
	'say <direction>'
	'listen <direction>'

	<direction> = [code]up, down, left, right[/code]

[font_size=20][b][color=#2ec4b6]Code features[/color][/b][/font_size]
	[b][color=#208c81]Jumps[/color][/b]
	In code you can jump between lines. First of all you need to create an anchor.
	E.g. '[i][color=#ff9f1c]start:[/color][/i] '.
	Every anchor has ' : ' at the end.
	Then you can use any jump in this list.
[ul][b][color=#ff9f1c]jump[/color][/b] <anchor> 
[ul]
Gets you to the anchor.
[/ul]
[/ul]
[ul][b][color=#ff9f1c]jumpz[/color][/b] <anchor> 
[ul]
Gets you to the anchor if active number is [b][color=#ff9f1c]zero[/color][/b]. Otherwise just skip this line.
[/ul]
[/ul]
[ul][b][color=#ff9f1c]jumpl[/color][/b] <anchor> 
[ul]
Gets you to the anchor if active number is [color=#ff9f1c][b]less[/b][/color] than [b][color=#ff9f1c]zero[/color][/b]. Otherwise just skip this line.
[/ul]
[/ul]
[ul][b][color=#ff9f1c]jumpg[/color][/b] <anchor> 
[ul]
Gets you to the anchor if active number is [color=#ff9f1c][b]greater[/b][/color] than [b][color=#ff9f1c]zero[/color][/b]. Otherwise just skip this line.
[/ul]
[/ul]

	[b][color=#208c81]Functions[/color][/b]
	To create function you use '[b][color=#ff9f1c]func[/color][/b]' keyword.
	E.g. 'func func_name:'
	And closed with andfunc.
	If you need to quit it you can use '[b][color=#ff9f1c]return[/color][/b]' keyword.
	E.g.:[i][color=#ff9f1c]
		func func_name:
		loop:
		sub 1
		jumpg loop
		return
		endfunc
[/color][/i]
	To [b][color=#ff9f1c]call[/color][/b] a function just write func_name.


"
selection_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 352)

[node name="HTTPRequestScoreUpdate" type="HTTPRequest" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_33de2")
autoplay = true

[node name="AudioStreamPlayerClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_e088g")
volume_db = -18.85

[connection signal="item_selected" from="CanvasLayer/interface/Panel/botsSelect" to="." method="_on_bots_select_item_selected"]
[connection signal="pressed" from="CanvasLayer/interface/Panel/RunButton" to="." method="_on_run_button_pressed"]
[connection signal="pressed" from="CanvasLayer/interface/Panel/StepButton" to="." method="_on_step_button_pressed"]
[connection signal="drag_ended" from="CanvasLayer/interface/Panel/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="text_changed" from="CanvasLayer/interface/Panel/CodeEdit" to="." method="_on_code_edit_text_changed"]
[connection signal="pressed" from="CanvasLayer/interface/Panel/DebugButton" to="." method="_on_debug_button_pressed"]
[connection signal="pressed" from="CanvasLayer/interface/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/interface/FullScreenButton" to="." method="_on_full_screen_button_pressed"]
[connection signal="pressed" from="CanvasLayer/interface/ExitToMenuButton" to="." method="_on_exit_to_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/interface/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="floor_reset" from="TileMap" to="TileMap" method="_on_floor_reset"]
[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timer_timeout"]
[connection signal="pressed" from="ErrorWindow/ErrorButton" to="." method="_on_error_button_pressed"]
[connection signal="pressed" from="WinLoseWindow/Panel/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="WinLoseWindow/Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="WinLoseWindow/Panel/ExitToMenuButton" to="." method="_on_exit_to_menu_button_pressed"]
[connection signal="close_requested" from="HelpWindow" to="." method="_on_help_window_close_requested"]
[connection signal="request_completed" from="HTTPRequestScoreUpdate" to="." method="_on_http_request_score_update_request_completed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="finished" from="AudioStreamPlayerClick" to="." method="_on_audio_stream_player_click_finished"]
